# Ingredex-Backend

./: .env.example  .gitignore  .python-version  FOLDER_STRUCTURE_CHANGE_BRIEF.txt  README.md  alembic.ini  pyproject.toml  requirements.txt  run.py  test_api.http
.cph/: .Counting_Towers.cpp_942a4c59224eab6b6866ba3aec86a42b.prob
alembic/: env.py
alembic/versions/: 1d3dadb6450a_add_health_profile_to_users.py  3b52bbe89d67_initial_tables.py  4c7d2a1e9f00_add_analysis_scan_type.py  6a1f3c8d2e10_add_refresh_tokens_table.py
app/: cli.py  config.py  database.py  dependencies.py  main.py
app/ai/: agents.py  crew.py  preprocessor.py  tasks.py
app/features/: __init__.py
app/features/analyze/: __init__.py  dao.py  handler.py  router.py  schemas.py  service.py
app/features/auth/: __init__.py  dao.py  handler.py  router.py  schemas.py  service.py
app/features/history/: __init__.py  dao.py  handler.py  router.py  schemas.py  service.py
app/features/profile/: __init__.py  dao.py  handler.py  router.py  schemas.py  service.py
app/features/scan/: __init__.py  dao.py  handler.py  router.py  schemas.py  service.py
app/models/: __init__.py  otp.py  product_scan.py  refresh_token.py  user.py
app/routers/: analyze.py  auth.py  history.py  profile.py  scan.py
app/schemas/: __init__.py  analysis.py  auth.py  history.py  profile.py
app/services/: auth_service.py  cache_service.py  otp_service.py  scan_service.py  web_search_service.py
app/shared/: __init__.py
app/shared/services/: __init__.py  cache_service.py  ocr_service.py
app/utils/: jwt_handler.py  logger.py
